ingress/ingress-route.yaml
# used to set up an ingress route to ipv4check
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ipv4check-ingress
  namespace: ipv4check
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
spec:
  tls:
  - hosts:
    - ipv4check.getburke.com
    secretName: secretpw
  rules:
   - host: ipv4check.getburke.com
     http:
      paths:
      - path: /
        backend:
          serviceName: ipv4check
          servicePort: 80
